fixed skeleton wrapper positioning on mobile.

--- a/components/ResultsSection/ResultsSection.module.scss
+++ b/components/ResultsSection/ResultsSection.module.scss
@@ -6,7 +6,6 @@
   padding-left: 5%;
   padding-right: 5%;
   & .skeletonWrapper {
-    padding-top: 10vh;
     position: relative;
     width: 100%;
     height: 100%;
@@ -33,6 +32,9 @@
     grid-area: results;
     & .resultsSlider {
       background: #f5f5f5;
+    }
+    & .skeletonWrapper {
+      padding-top: 10vh;
     }
   }
 }
